src/components/DataStructures/Graph/GraphRenderer/GraphRenderer.module.scss
@import "../../common/stylesheet/index";


// --graph-node-fill: orange;

@keyframes colorChange {

  0% {
    fill: var(--stable_color);
  }

  50% {
    fill: var(--breath_color);
  }

  100% {
    fill: var(--stable_color);
  }
}

.graph {
  flex: 1;
  align-self: stretch;
  --stable_color: var(--graph-node-circle-fill);
  --breath_color: var(--graph-node-circle-fill);

  .node {
    .circle {
      fill: var(--graph-node-circle-fill);
      //--breath_color: --graph-node-circle-fill-rgb1;
      //animation: colorChange 3s infinite; // anmation

      stroke: var(--graph-node-circle-stroke);
      stroke-width: 1;
    }

    .rect {
      fill: var(--graph-node-circle-fill);
      stroke: var(--graph-node-circle-stroke);
      stroke-width: 1;
    }

    .id {
      fill: var(--graph-node-id-fill);
      dominant-baseline: central;
      text-anchor: middle;
      font-size: 35px; // font size for labels inside nodes
    }

    .weight {
      fill: var(--graph-node-weight-fill);
      font-weight: bold;
      font-size: 15px;
      alignment-baseline: central;
      text-anchor: left;
    }

    .height {
      //--breath_color: var(--graph-node-height-fill);
      //animation: colorChange 1.5s 3; // anmation

      fill: var(--graph-node-id-fill);

      // font-weight: bold;
      // font-size: 15px;
      // alignment-baseline: central;
      dominant-baseline: central;
      text-anchor: middle;
      font-size: 35px; // font size for labels inside nodes
      transform: translateY(-50px);
      // text-anchor: left;
    }

    .AVL_TID {
      //fill: var(--graph-node-AVL_TID-fill);
      --breath_color: var(--graph-node-AVL_TID-fill);
      animation: colorChange 1.5s infinite; // anmation
      // font-weight: bold;
      // font-size: 15px;
      // alignment-baseline: central;
      dominant-baseline: central;
      text-anchor: middle;
      font-size: 40px; // font size for labels inside nodes
      // transform: translateY(-40px);
      transform: translate(+50px, -35px);
      // text-anchor: left;
    }

    &.selected {
      .circle {
        //fill: var(--graph-node-circle-fill-selected);
        --breath_color: var(--graph-node-circle-fill-selected);
        animation: colorChange 1.5s infinite; // anmation
        stroke: var(--graph-node-circle-stroke-selected);
      }

      .rect {
        fill: var(--graph-node-circle-fill-selected);
        stroke: var(--graph-node-circle-stroke-selected);
      }

      .id {
        fill: var(--graph-node-id-fill-selected);
      }

      .height {
        //--breath_color: var(--graph-node-height-fill);
        //animation: colorChange 1.5s 3; // anmation

        fill: var(--graph-node-circle-fill-selected);
      }

    }

    &.visited0 {
      .circle {
        fill: var(--graph-node-circle-fill-visited0);
        stroke: var(--graph-node-circle-stroke-visited0);
      }

      .rect {
        fill: var(--graph-node-circle-fill-visited0);
        stroke: var(--graph-node-circle-stroke-visited0);
      }

      .id {
        fill: var(--graph-node-id-fill-visited);
      }

      .height {
        --breath_color: var(--graph-node-circle-fill-visited0);
        animation: colorChange 1.5s 0; // anmation

        fill: var(--graph-node-circle-fill-visited0);
      }

    }

    &.visited {
      .circle {
        fill: var(--graph-node-circle-fill-visited);
        stroke: var(--graph-node-circle-stroke-visited);
      }

      .rect {
        fill: var(--graph-node-circle-fill-visited);
        stroke: var(--graph-node-circle-stroke-visited);
      }

      .id {
        fill: var(--graph-node-id-fill-visited);
      }

      .height {
        --breath_color: var(--graph-node-circle-fill-visited);
        animation: colorChange 1.5s 0; // anmation

        fill: var(--graph-node-circle-fill-visited);
      }

    }

    &.sorted {
      .circle {
        fill: var(--graph-node-circle-fill-sorted);

      }

      .id {
        fill: var(--graph-node-id-fill-sorted);
      }
    }

    &.visited1 {
      .circle {
        fill: var(--graph-node-circle-fill-visited1);
        stroke: var(--graph-node-circle-stroke-visited1);
      }

      .id {
        fill: var(--graph-node-id-fill-visited);
      }

      .height {
        --breath_color: var(--graph-node-circle-fill-visited1);
        animation: colorChange 1.5s 0; // anmation

        fill: var(--graph-node-circle-fill-visited1);
      }

    }

    &.visited2 {
      .circle {
        fill: var(--graph-node-circle-fill-visited2);
        stroke: var(--graph-node-circle-stroke-visited2);
      }

      .id {
        fill: var(--graph-node-id-fill-visited);
      }

      .height {
        --breath_color: var(--graph-node-circle-fill-visited2);
        animation: colorChange 1.5s 0; // anmation

        fill: var(--graph-node-circle-fill-visited2);
      }

    }

    &.visited3 {
      .circle {
        fill: var(--graph-node-circle-fill-visited3);
        stroke: var(--graph-node-circle-stroke-visited3);
      }

      .id {
        fill: var(--graph-node-id-fill-visited);
      }

      .height {
        --breath_color: var(--graph-node-circle-fill-visited3);
        animation: colorChange 1.5s 0; // anmation

        fill: var(--graph-node-circle-fill-visited3);
      }

    }

    &.visited4 {
      .circle {
        fill: var(--graph-node-circle-fill-visited4);
        stroke: var(--graph-node-circle-stroke-visited4);
      }

      .id {
        fill: var(--graph-node-id-fill-visited);
      }

      .height {
        --breath_color: var(--graph-node-circle-fill-visited4);
        animation: colorChange 1.5s 0; // anmation

        fill: var(--graph-node-circle-fill-visited4);
      }

    }
  }

  .edge {
    .line {
      stroke: var(--graph-edge-line-stroke);
      // For various trees we don't care much about edges so having them
      // thin is fine but for some graph algorithms in particular we
      // want to highlight edges and change their color to we want
      // reasonable thick edges; this is a compromise (maybe we could
      // add an interface to adjust it for different algorithms XXX)
      stroke-width: 7; // width of edges in graphs
      fill: none;

      &.directed {
        marker-end: url(#markerArrow);
      }
    }

    .weight {
      fill: var(--graph-edge-line-weight-fill);
      alignment-baseline: baseline;
      text-anchor: middle;
      // font size for labels in nodes - should be linked to node radius
      // XXX but currently isn't.  Another difficulty was node sizes
      // were adjusted depending on coordinate list - now deleted.
      // font-size: 15px;
      font-size: 35px;
    }

    &.selected {
      .line {
        stroke: var(--graph-edge-line-stroke-selected);

        &.directed {
          marker-end: url(#markerArrowSelected);
        }
      }

      .weight {
        fill: var(--graph-edge-weight-fill-selected);
      }
    }

    &.sorted {
      .line {
        stroke-width: 0;
      }
    }

    &.visited {
      .line {
        stroke: var(--graph-edge-line-stroke-visited);

        &.directed {
          marker-end: url(#markerArrowVisited);
        }
      }

      .weight {
        fill: var(--graph-edge-weight-fill-visited);
      }
    }

    &.visited1 {
      .line {
        stroke: var(--graph-edge-line-stroke-visited1);

        &.directed {
          marker-end: url(#markerArrowVisited1);
        }
      }

      .weight {
        fill: var(--graph-edge-weight-fill-visited1);
      }
    }

    &.visited2 {
      .line {
        stroke: var(--graph-edge-line-stroke-visited2);

        &.directed {
          marker-end: url(#markerArrowVisited2);
        }
      }

      .weight {
        fill: var(--graph-edge-weight-fill-visited2);
      }
    }

    &.visited3 {
      .line {
        stroke: var(--graph-edge-line-stroke-visited3);

        &.directed {
          marker-end: url(#markerArrowVisited3);
        }
      }

      .weight {
        fill: var(--graph-edge-weight-fill-visited3);
      }
    }

    &.visited4 {
      .line {
        stroke: var(--graph-edge-line-stroke-visited4);

        &.directed {
          marker-end: url(#markerArrowVisited4);
        }
      }

      .weight {
        fill: var(--graph-edge-weight-fill-visited4);
      }
    }

  }

  .arrow {
    fill: var(--graph-arrow-fill);

    &.selected {
      fill: var(--graph-arrow-fill-selected);
    }

    &.visited {
      fill: var(--graph-arrow-fill-visited);
    }

    &.visited1 {
      fill: var(--graph-arrow-fill-visited1);
    }

    &.visited2 {
      fill: var(--graph-arrow-fill-visited2);
    }

    &.visited3 {
      fill: var(--graph-arrow-fill-visited3);
    }

    &.visited4 {
      fill: var(--graph-arrow-fill-visited4);
    }
  }

  // X, Y axis
  .axis {
    stroke: var(--axis);
    stroke-width: 1;
    fill: none;

  }

  .axisLabel {
    // font-size: 15px;
    font-size: 35px;
    font-weight: 1;
  }

  .text {
    fill: var(--array-2d-row-col-value-color); // to support light and dark mode
    dominant-baseline: central;
    text-anchor: middle;
    font-size: 35px;
    font-family: Menlo, "Liberation Mono", Courier, monospace;
  }

  .pseudocode_function {
    fill: var(--right-code-function-font);
    dominant-baseline: central;
  }

}

